# ComfyUI-CLIPSlider

./: README.md  nodes.py  pyproject.toml
workflows/: clipslider-1.json  clipslider-4.json
